--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -41,6 +48,8 @@
             <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
+
+
 
     </dependencies>
 
